//
// Protocol buffers definition for RemoteDocs server
//
syntax = "proto3";
package sirs.remotedocs.grpc;

message LoginRequest {
	string name = 1;
	string password = 2;
}

message LoginResponse {
	repeated Document documents = 1;
	 
}

message Document { 
	string name = 1;
	int32 relationship = 2;
}
message RegisterRequest {
	string name = 1;
	string password = 2;
}

message RegisterResponse {
	
}

service RemoteDocs {
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc Register(RegisterRequest) returns (RegisterResponse);
}
